welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: reassignment to val
litMessage = "Z" 
           ^